--- a/ascendancy-us/PKGBUILD
+++ b/ascendancy-us/PKGBUILD
@@ -5,21 +5,21 @@
 # CD_DIR: path where your Ascendancy CDROM is mounted
 : ${CD_DIR:="$HOME/media/Ascend.iso/"}
 
-# NON_US_RELEASE: false if you have an US version of the game, true otherwise.
-: ${NON_US_RELEASE:="true"}
-
-pkgname=ascendancy
-pkgdesc="Science fiction turn-based strategy game (uses DosBox)"
-pkgver=1.8.10
+pkgname=ascendancy-us
+pkgdesc="Science fiction turn-based strategy game (for US version, uses DOSBox)"
+pkgver=1.6.10
 pkgrel=1
 arch=(any)
 license=("custom")
 url="http://www.logicfactory.com/main/Logic_Factory.html"
 depends=("modfs-git" "dosbox" "dos32a")
 makedepends=("convmv" "findutils")
+provides=("ascendancy")
+conflicts=("ascendancy")
 source=("ascendancy.desktop"
         "ascendancy-config.desktop"
         "ascendancy.png::http://www.logicfactory.com/main/Logic_Factory_files/Ascendancy App Icon 1024x1024 cutout.png"
+        "ftp://ftp.physics.auth.gr/pub/mirrors/ftp.patches-scrolls.de/pub/Ascendancy/antag.zip"
         "libascendancy.sh"
         "ascendancy.sh"
         "ascendancy-config.sh"
@@ -29,21 +29,13 @@ source=("ascendancy.desktop"
 md5sums=('8220b2cbc77550f8ceb9fed0e9150645'
          '7f3d6de0b3faeb8cb3ae010019fee4dd'
          '66f837b34eae60d7460a27faf07f15c8'
+         '842a7759c956e403aac375e83e49dfa9'
          'a00edab246c0609ad51d93beb19b2842'
          '4843cdccb18345985094e2e4af67718c'
          '21efad1eb015797c12a2fffdfe877954'
          'dd6f2982c95ea14dd479469e9c98a5fd'
          '38009106cef651c7963c5209b80a393c'
          '64095329fffbe095fe803cc1b421b885')
-
-if "$NON_US_RELEASE"; then
-  source+=("ftp://ftp.physics.auth.gr/pub/mirrors/ftp.patches-scrolls.de/pub/Ascendancy/antag_f.zip")
-  md5sums+=("3d297d90f1bf68eb680dfcfb5652c2f7")
-else
-  source+=("ftp://ftp.physics.auth.gr/pub/mirrors/ftp.patches-scrolls.de/pub/Ascendancy/antag.zip")
-  md5sums+=("842a7759c956e403aac375e83e49dfa9")
-fi
-
 
 package() {
   # Copy original resources (case-insensitive)
@@ -55,7 +47,7 @@ package() {
   
   install -Dm644 "$srcdir/cob.cfg" "$pkgdir/usr/share/games/ascendancy/data/cob.cfg"
 
-  # Install 1.8.10 patch
+  # Install 1.6.10 patch (aka the Antagonizer)
   install -Dm644 "$srcdir/ANTAG.EXE" "$pkgdir/usr/share/games/ascendancy/data/ascend.exe"
 
   cd "$pkgdir/usr/share/games/ascendancy/data"
