darkforces-1.0-3: port to modfs

--- a/darkforces/darkforces.desktop
+++ b/darkforces/darkforces.desktop
@@ -10,6 +10,6 @@ Type=Application
 Terminal=false
 Icon=darkforces
 Exec=darkforces
-Categories=Application;Game;ActionGame;
+Categories=Game;ActionGame;
 
 
