tiefighter-1.0-3: port to modfs

--- a/tiefighter/tiefighter.desktop
+++ b/tiefighter/tiefighter.desktop
@@ -10,6 +10,4 @@ Type=Application
 Terminal=false
 Icon=tiefighter
 Exec=tiefighter
-Categories=Application;Game;Simulation;
-
-
+Categories=Game;Simulation;
