--- a/tiefighter-collector-cdrom/tiefighter.desktop
+++ b/tiefighter-collector-cdrom/tiefighter.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Tie Fighter
+Name=Star Wars: Tie Fighter
 GenericName=Flight simulator
 GenericName[fr]=Simulateur de vol
 Comment=Space flight and combat simulator set in the Star Wars universe
