--- a/x-wing-collector-cdrom/x-wing.desktop
+++ b/x-wing-collector-cdrom/x-wing.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=X-Wing
+Name=Star Wars: X-Wing
 GenericName=Flight simulator
 GenericName[fr]=Simulateur de vol
 Comment=Space flight and combat simulator set in the Star Wars universe
