--- a/darkforces/darkforces.desktop
+++ b/darkforces/darkforces.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Dark Forces
+Name=Star Wars: Dark Forces
 GenericName=First person shooter
 GenericName[fr]=Jeu de tir subjectif
 Comment=First person shooter set in the Star Wars universe.
