--- a/rebelassault/PKGBUILD
+++ b/rebelassault/PKGBUILD
@@ -3,30 +3,25 @@
 pkgname=rebelassault
 pkgver=1.8
 pkgrel=1
-pkgdesc="Action game set in the Star Wars universe (uses DOSBox)"
+pkgdesc="Action game set in the Star Wars universe (uses DOSBox, CD-ROM required)"
 arch=("any")
 depends=("dosbox" "dos32a")
-makedepends=("unzip")
 license=("custom")
 url="http://www.lucasarts.com"
-source=("ftp://ftp.lucasarts.com/patches/pc/reb18.exe"
+source=("reb18.zip::ftp://ftp.lucasarts.com/patches/pc/reb18.exe"
         "http://icons.iconarchive.com/icons/3xhumed/mega-games-pack-29/256/Star-Wars-Rebel-Assault-1-icon.png"
         "lib${pkgname}.sh"
         "${pkgname}.sh"
         "${pkgname}.desktop")
 md5sums=('cee08a288d8d2e18b4ecf4c2fc304dc5'
          '28f18180a1d4a4c690d7ecc1b0912c6d'
-         '50b38ed8c0a1f806d8da4168e353f0b2'
-         'd1581f6cfaade203d43091434aea23d0'
+         'e01625a42538f4f0f513b3d10996f570'
+         'ad359a72785ef938d2edb36d5f0f4a76'
          '786abf4cc25641a6ddbdfb5715654f6c')
+install="${pkgname}.install"
 
 # Change this to the path where your Rebel Assault CDROM is mounted
 : ${CD_DIR:="$HOME/media/Rebel_Assault.iso/"}
-
-build() {
-  cd "${srcdir}"
-  unzip -o reb18.exe
-}
 
 package() {
   local diskDir="${pkgdir}/usr/share/games/${pkgname}"
