--- a/nwn/PKGBUILD
+++ b/nwn/PKGBUILD
@@ -104,7 +104,7 @@ package_nwn() {
   pkgdesc="Neverwinter Nights RPG from BioWare"
   provides=("nwn-base" "nwn-server")
   conflicts=("nwn-base" "nwn-server" "nwn-diamond")
-  depends=("nwn-original-resources=${pkgver}" "mesa" "hicolor-icon-theme" "xdg-utils" "expect" "detachtty")
+  depends=("nwn-original-resources=${pkgver}" "mesa" "hicolor-icon-theme" "xdg-utils" "expect" "detachtty" "modfs-git")
   ${_useBuiltinSDL} || depends+=("sdl")
   optdepends=("intel-dri: 3D acceleration for Intel chipsets"
               "nvidia-utils: 3D acceleration for NVIDIA cards"
@@ -120,7 +120,7 @@ package_bin32-nwn() {
   pkgdesc="Neverwinter Nights RPG from BioWare"
   provides=("nwn" "nwn-base" "nwn-server")
   conflicts=("nwn" "nwn-base" "nwn-server" "nwn-diamond")
-  depends=("nwn-original-resources=${pkgver}" "lib32-mesa" "hicolor-icon-theme" "xdg-utils" "expect" "detachtty")
+  depends=("nwn-original-resources=${pkgver}" "lib32-mesa" "hicolor-icon-theme" "xdg-utils" "expect" "detachtty" "modfs-git")
   ${_useBuiltinSDL} || depends+=("lib32-sdl")
   optdepends=("lib32-intel-dri: 3D acceleration for Intel chipsets"
               "lib32-nvidia-utils: 3D acceleration for NVIDIA cards"
