nwn-nwmouse-3.1-1: start nwn twice the first time nwmouse is loaded or if nwmain has changed

--- a/nwn-nwmouse/PKGBUILD
+++ b/nwn-nwmouse/PKGBUILD
@@ -8,11 +8,11 @@ pkgver=3.1
 pkgrel=1
 license=("custom")
 url="http://home.roadrunner.com/~nwmovies/nwmouse/"
-depends=("nwn" "elfutils" "libxcursor")
+depends=("nwn-base" "elfutils" "libxcursor" "sdl")
 makedepends=("perl")
 [ "x$CARCH" = "xx86_64" ] && pkgname="lib32-nwn-nwmouse"
-[ "x$CARCH" = "xx86_64" ] && depends=("bin32-nwn" "lib32-elfutils" "lib32-libxcursor")
-[ "x$CARCH" = "xx86_64" ] && makedepends+=("gcc-multilib" "elfutils" "libxcursor")
+[ "x$CARCH" = "xx86_64" ] && depends=("nwn-base" "lib32-elfutils" "lib32-libxcursor" "lib32-sdl")
+[ "x$CARCH" = "xx86_64" ] && makedepends+=("gcc-multilib" "elfutils" "libxcursor" "sdl")
 [ "x$CARCH" = "xx86_64" ] && provides=("nwn-nwmouse")
 [ "x$CARCH" = "xx86_64" ] && conflicts=("nwn-nwmouse")
 source=("http://home.roadrunner.com/~nwmovies/nwmouse/nwmouse-v2-public.20090906.183839.tar.gz"
@@ -20,7 +20,7 @@ source=("http://home.roadrunner.com/~nwmovies/nwmouse/nwmouse-v2-public.20090906
         "20-nwmouse.sh")
 md5sums=('02bf7f5610c928a5910d1cab4bf3f87a'
          '7cc58b40ef7e2d32291c5a68f3178c9f'
-         '6fe1cb289e7233f9f8b88c1d8bc26a0c')
+         'd898af5d4ebf686ea75ddb2f8c59fa81')
 
 build() {
   cd "${srcdir}"
