--- a/nwn/nwserver.conf
+++ b/nwn/nwserver.conf
@@ -1,8 +1,11 @@
-# Array containing valid nwserver arguments
-NWSERVER_ARGS=()
+# Timeout when trying to save the game before stopping the server (in seconds)
+NWSERVER_SAVE_TIMEOUT=10 
 
 # Save slot to use when stopping the server
 NWSERVER_SAVE_SLOT=2
 
 # Save name to use when stopping the server
 NWSERVER_SAVE_NAME=shutdown
+
+# Array containing valid nwserver arguments
+NWSERVER_ARGS="-module 'Prelude' -load '$NWSERVER_SAVE_SLOT'"
