nwn-1.69-1: nwserver rc script tweaks
Chnage server name
Force interactive mode
Fix comment in conf

--- a/nwn/nwserver.conf
+++ b/nwn/nwserver.conf
@@ -7,5 +7,5 @@ NWSERVER_SAVE_SLOT=2
 # Save name to use when stopping the server
 NWSERVER_SAVE_NAME=shutdown
 
-# Array containing valid nwserver arguments
+# Commandline arguments
 NWSERVER_ARGS="-module 'Prelude' -load '$NWSERVER_SAVE_SLOT'"
