--- a/linux-dreamplug/PKGBUILD
+++ b/linux-dreamplug/PKGBUILD
@@ -4,17 +4,18 @@ pkgbase="linux-dreamplug"
 pkgname=("linux-dreamplug" "linux-dreamplug-headers")       # Build kernel with a different name
 _kernelname=${pkgname#linux}
 _basekernel=3.1
-pkgver=${_basekernel}.4
+pkgver=${_basekernel}.7
 pkgrel=1
 arch=('arm')
 url="http://www.kernel.org/"
 license=('GPL2')
 makedepends=('xmlto' 'docbook-xsl' 'uboot-mkimage')
 options=('!strip')
-_alarmcommit="6205be12c61c5d419962a427bea489a71f34b4e5"
+_alarmcommit="401a6d1521ead9931bb32581fe45c70b55a67ef7"
 source=("ftp://ftp.kernel.org/pub/linux/kernel/v3.x/linux-${_basekernel}.tar.bz2"
         "ftp://ftp.kernel.org/pub/linux/kernel/v3.x/patch-${pkgver}.bz2"
         "https://github.com/archlinuxarm/PKGBUILDs/raw/${_alarmcommit}/core/linux/archlinuxarm.patch"
+        "https://github.com/archlinuxarm/PKGBUILDs/raw/${_alarmcommit}/core/linux/support.patch"
         "https://github.com/archlinuxarm/PKGBUILDs/raw/${_alarmcommit}/core/linux/aufs3-kbuild.patch"
         "https://github.com/archlinuxarm/PKGBUILDs/raw/${_alarmcommit}/core/linux/aufs3-base.patch"
         "https://github.com/archlinuxarm/PKGBUILDs/raw/${_alarmcommit}/core/linux/aufs3-standalone.patch"
@@ -27,13 +28,14 @@ source=("ftp://ftp.kernel.org/pub/linux/kernel/v3.x/linux-${_basekernel}.tar.bz2
         "http://sheeva.with-linux.com/sheeva/3/${_basekernel}/${pkgver}/source/mvsdio-2.patch"
         "http://sheeva.with-linux.com/sheeva/3/${_basekernel}/${pkgver}/source/linux-3.0.4-LIBERTAS-WEXT_PRIV.patch")
 md5sums=('8d43453f8159b2332ad410b19d86a931'
-         'b8b14bdfbf76cfef8e042e7d1a385fca'
-         'e930a6fee04e63514d2c366c94519bb2'
+         '13ea1e611a0a580138b8203e6f1353ed'
+         '18f59dbd0df3dd7b36e8c4714e2c6725'
+         'f5d3635da03cb45904bedd69b47133de'
          '3f64ed9d71499fe9293dc671f4e4087e'
          '29628745258df910abfb8cb24ca3ccd9'
          'c9e6e8bb0774a89f7f9bd30a13be7532'
          '55b04499a4578e586cf5a4d0b69fc5aa'
-         'fb1fa553bbeaf17a03e1df8a8d58b02d'
+         '5c5d2cf86500362353bced8f6764addc'
          '9d3c56a4b999c8bfbd4018089a62f662'
          'd00814b57448895e65fbbc800e8a58ba'
          '915a9380e205d4ca8c179c745831c3e0'
@@ -44,26 +46,31 @@ md5sums=('8d43453f8159b2332ad410b19d86a931'
 build() {
   cd "${srcdir}/linux-${_basekernel}"
 
-  # Add upstream patch
-  patch -p1 -i "${srcdir}/patch-${pkgver}"
+  msg2 "Patching"
+
+  [ "${pkgver}" != "${_basekernel}" ] && {
+    plain "Applying upstream patch"
+    patch -p1 -i "${srcdir}/patch-${pkgver}"
+  }
 
   # Add latest fixes from stable queue, if needed
   # http://git.kernel.org/?p=linux/kernel/git/stable/stable-queue.git
 
-  # Add the USB_QUIRK_RESET_RESUME for several webcams
   # FS#26528
+  plain "Applying the USB_QUIRK_RESET_RESUME for several webcams patch"
   patch -Np1 -i "${srcdir}/usb-add-reset-resume-quirk-for-several-webcams.patch"
 
-  # Add Arch Linux ARM patch for ARMv5te plug computers
+  plain "Applying Arch Linux ARM patch for ARMv5te plug computers and requested additional support"
   patch -Np1 -i "${srcdir}/archlinuxarm.patch"
+  patch -Np1 -i "${srcdir}/support.patch"
 
-  # Add AUFS3 patches
+  plain "Applying AUFS3 patches"
   patch -Np1 -i "${srcdir}/aufs3-kbuild.patch"
   patch -Np1 -i "${srcdir}/aufs3-base.patch"
   patch -Np1 -i "${srcdir}/aufs3-standalone.patch"
   patch -Np1 -i "${srcdir}/aufs3-git-extras.patch"
 
-  # Add Sheeva With-Linux patches
+  plain "Applying Sheeva With-Linux patches"
   patch -Np1 -i "${srcdir}/linux-3.0-SDIO-micro-AP.patch"
   patch -Np1 -i "${srcdir}/mvsdio-1-2.6.30.patch"
   patch -Np1 -i "${srcdir}/mvsdio-2.patch"
@@ -72,9 +79,11 @@ build() {
   # Set DEFAULT_CONSOLE_LOGLEVEL to 4 (same value as the 'quiet' kernel param)
   # remove this when a Kconfig knob is made available by upstream
   # (relevant patch sent upstream: https://lkml.org/lkml/2011/7/26/227)
+  plain "Applying the DEFAULT_CONSOLE_LOGLEVEL patch"
   patch -Np1 -i "${srcdir}/change-default-console-loglevel.patch"
 
   # Copy in Arch Linux ARM configuration and modify it to work on DreamPlugs
+  msg2 "Configuring the kernel"
   cat ../config <(echo "CONFIG_LIBERTAS_UAP=m") |
     sed -e 's/^.*CONFIG_MTD[^_].*$/CONFIG_MTD=n/' \
         -e 's/^.*CONFIG_MMC_USHC[^_].*$/CONFIG_MMC_USHC=m/' \
@@ -110,7 +119,7 @@ build() {
 
   yes "" | make config
 
-  # build!
+  msg2 "Building"
   make ${MAKEFLAGS} uImage modules
 }
 
