--- a/sd8688-wlan/PKGBUILD
+++ b/sd8688-wlan/PKGBUILD
@@ -3,27 +3,27 @@
 pkgname=sd8688-wlan
 pkgver=26609.P64
 epoch=1
-pkgrel=3
+pkgrel=4
 pkgdesc="WLAN driver for Marvell SD8688 WiFi/BlueTooth chipset."
-arch=('i686' 'x86_64' 'arm')
+arch=('i686' 'arm')
 url='http://plugcomputer.org/plugwiki/index.php/Setting_GuruPlug_to_be_a_stable_WiFi_Client'
 license=('GPL')
 depends=('linux' 'sd8688-firmware')
 makedepends=('linux-headers' 'gzip')
 install='sd8688-wlan.install'
 source=("http://plugcomputer.org/plugwiki/images/0/05/SD_WLAN.tar.gz"
-        "sd_wlan-linux-3.1.diff")
+        "sd_wlan-linux-3.2.diff")
 md5sums=('2f279f30bee27ca52118b931b39a922b'
-         '03606599a4ade1977e9e39935307c38e')
+         'a2fa2497700d145543a435d29ebf9b6d')
 
-: ${_extramodules:=$(basename $(readlink -f "/lib/modules/$(uname -r)/extramodules"))}
+: ${_extramodules:="$(basename "$(readlink -f "/lib/modules/$(uname -r)/extramodules")")"}
 _kernver="$(cat /lib/modules/${_extramodules}/version)"
 
 build() {
   local bArch
 
   cd "${srcdir}"
-  patch -Np1 -i "sd_wlan-linux-3.1.diff"
+  patch -Np1 -i "sd_wlan-linux-3.2.diff"
   cd "SD_WLAN/SD-WLAN-BT-8688-LINUX2625-SAAR-10.49.3.p70-26609.P64_B1/wlan_src"
 
   [ x$CARCH = xarm ] && bArch=arm
