--- a/dynamite-git/PKGBUILD
+++ b/dynamite-git/PKGBUILD
@@ -9,9 +9,10 @@ pkgrel=1
 pkgdesc="Dynamite is a tool and library for decompressing data compressed with PKWARE Data Compression Library. Git version."
 arch=('i686' 'x86_64')
 url="https://github.com/twogood/dynamite/"
-license=("GPL")
+license=("BSD")
 provides=('dynamite' 'dynamite-svn')
 conflicts=('dynamite')
+makedepends=("git")
 
 _gitroot="https://github.com/twogood/dynamite.git"
 _gitname="dynamite"
@@ -42,5 +43,6 @@ build() {
 package() {
   cd "$srcdir/$_gitname-build"
   make DESTDIR="$pkgdir" install
+  install -Dm644 "LICENSE" "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
 
