--- a/kaa-display/PKGBUILD
+++ b/kaa-display/PKGBUILD
@@ -4,13 +4,12 @@ pkgname=kaa-display
 pkgver=0.1.0
 pkgrel=3
 pkgdesc="Python API providing Low level support for various displays, such as X11 or framebuffer"
-arch=('any')
+arch=('i686' 'x86_64')
 url="http://freevo.sourceforge.net/kaa"
 license=('LGPL')
 groups=()
-depends=('kaa-base')
+depends=('kaa-base' 'kaa-imlib2' 'python-pygame')
 makedepends=('python2-distribute')
-optdepends=('kaa-imlib2' 'python-pygame')
 conflicts=('kaa-svn')
 source=("http://downloads.sourceforge.net/project/freevo/$pkgname/$pkgver/$pkgname-$pkgver.tar.gz")
 md5sums=('3a45f583b9b885aab8671b63b0f757cf')
