--- a/flashplayer-standalone/PKGBUILD
+++ b/flashplayer-standalone/PKGBUILD
@@ -3,10 +3,11 @@
 
 pkgbase=flashplayer-standalone
 pkgname=(flashplayer-standalone)
-[ "x$CARCH" = "xi686" ] && pkgname=('flashplayer-standalone')
+depends=('gtk2' 'libxt' 'nss' 'desktop-file-utils')
 [ "x$CARCH" = "xx86_64" ] && pkgname=('bin32-flashplayer-standalone')
+[ "x$CARCH" = "xx86_64" ] &&  depends=('lib32-gtk2' 'lib32-libxt' 'lib32-nss' 'desktop-file-utils')
 pkgver=11.2.202.235
-pkgrel=2
+pkgrel=3
 pkgdesc="Macromedia standalone flash player (nonfree)"
 url="http://www.adobe.com/support/flashplayer/downloads.html"
 license="custom"
@@ -24,7 +25,6 @@ options=(!strip)
 install="$pkgbase.install"
 
 package_flashplayer-standalone() {
-  depends=('gtk2' 'libxt' 'nss' 'desktop-file-utils')
   arch=('i686')
   cd "${srcdir}"
   install -Dm755 flashplayer "${pkgdir}/usr/bin/flashplayer"
@@ -34,7 +34,6 @@ package_flashplayer-standalone() {
 }
 
 package_bin32-flashplayer-standalone() {
-  depends=('lib32-gtk2' 'lib32-libxt' 'lib32-nss' 'desktop-file-utils')
   arch=('x86_64')
   provides=('flashplayer-standalone')
   cd "${srcdir}"
